--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ MarkupSafe==0.23
 Werkzeug==0.10.4
 gunicorn==19.3.0
 itsdangerous==0.24
+newrelic==2.54.0.41
 oauthlib==1.0.3
 psycopg2==2.6.1
 requests==2.7.0
